--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,9 @@
     "outDir": "./dist",
     "strict": true,
     "esModuleInterop": true,
-    "allowJs": true
+    "allowJs": true,
+    "strictPropertyInitialization": false
   },
-  "include": ["src/ws_server/*", "src/ws_server/models/usersDB.ts"],
+  "include": ["src/ws_server/*", "src/ws_server/database/database.ts", "src/ws_server/types/index.ts"],
   "exclude": ["node_modules", "front"]
 }
